# tasks-actix

./: Cargo.toml  database.db
migrations/2021-12-28-034712_create_posts/: up.sql
migrations/2021-12-28-044315_tasks/: up.sql
src/: main.rs  models.rs  routes.rs  schema.rs
static/: style.css
templates/: 404.html  add_category.html  add_task.html  base.html  category.html  error.html  index.html
