[package]
name = "tasks-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.5.0"
actix-web = "3.3.3"
diesel = { version = "1.4.8", features = ["sqlite"] }
dotenv = "0.15.0"
serde = "1.0.132"
tera = "1.15.0"
